Fix empty card's width on smaller screens

--- a/front/src/components/EmptyCard/EmptyCard.css
+++ b/front/src/components/EmptyCard/EmptyCard.css
@@ -4,3 +4,15 @@
     height: 90vh !important;
     background-color: rgb(245, 245, 245);
 }
+
+@media only screen and (max-width: 576px) {
+    .empty-card {
+        width: 380px;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .empty-card {
+        width: 580px;
+    }
+}
